--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "league/oauth2-client": "^2.8",
         "microsoft/microsoft-graph": "^2.46"
     },
     "require-dev": {
